--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Crypto App EFREI</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
     <h1>🔐 Application de Cryptographie EB</h1>
