--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -21,6 +21,8 @@
         <form method="POST" action="/chiffrer">
             <label for="key">Clé :</label>
             <input type="text" id="key" name="key">
+            <button type="button" onclick="generateKey()">🔑 Générer une clé</button>
+            <input type="text" id="key" name="key">
 
             <label for="message">Message :</label>
             <textarea id="message" name="message"></textarea>
