--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -8,14 +8,10 @@
 <body>
 
 <div class="container">
-    <h1>
-        Application de Cryptographie EB
-    </h1>
+    <h1>Application de Cryptographie EB</h1>
 
     <div class="card">
-        <h2>
-            Chiffrement
-        </h2>
+        <h2>Chiffrement</h2>
         <form method="POST" action="/chiffrer">
             <label for="key">Clé :</label>
             <div style="display: flex; gap: 10px;">
@@ -31,9 +27,7 @@
     </div>
 
     <div class="card">
-        <h2>
-            Déchiffrement
-        </h2>
+        <h2>Déchiffrement</h2>
         <form method="POST" action="/dechiffrer">
             <label for="key_decrypt">Clé :</label>
             <input type="text" id="key_decrypt" name="key">
